--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,3 +90,8 @@ jobs:
       - store_test_results:
           path: coverage
       # See https://circleci.com/docs/2.0/deployment-integrations/ for example deploy configs
+
+      # Coveralls parallel build reporting
+          notify:
+            webhooks:
+              - url: https://coveralls.io/webhook?repo_token=(your repo token)
