--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,4 +94,4 @@ jobs:
       # Coveralls parallel build reporting
           notify:
             webhooks:
-              - url: https://coveralls.io/webhook?repo_token=(your repo token)
+              - url: https://coveralls.io/webhook?repo_token=$COVERALLS_REPO_TOKEN
