--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
             ./cc-test-reporter after-build --coverage-input-type simplecov --exit-code $?
           notify:
             webhooks:
-              - url: https://coveralls.io/webhook?repo_token=$COVERALLS_REPO_TOKEN
+              - url: https://coveralls.io/webhook?repo_token=rYk7utj3XBZ8wz2JYBUIJRLJtf9FZnqVv
       # Save test results for timing analysis
       - store_test_results:
           path: coverage
