--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,10 +88,11 @@ jobs:
             chmod +x ./cc-test-reporter
       # run tests!
       - run:
-          name: Run minitest in parallel
+          name: Run Rspec in parallel
           command: |
             ./cc-test-reporter before-build
-            bundle exec rake $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
+            bundle exec cucumber
+            bundle exec rspec
             ./cc-test-reporter after-build --coverage-input-type simplecov --exit-code $?
 
       # Save test results for timing analysis
